--- a/Coup/Coup/Base.lproj/Main.storyboard
+++ b/Coup/Coup/Base.lproj/Main.storyboard
@@ -33,6 +33,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jgm-BL-qKO">
                                 <rect key="frame" x="172" y="389" width="46" height="30"/>
                                 <state key="normal" title="Offline"/>
+                                <connections>
+                                    <segue destination="WAN-SW-7tD" kind="show" identifier="OfflineSegueIdentifier" id="DXk-od-cbA"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sDL-VU-DEd">
                                 <rect key="frame" x="166.66666666666666" y="449" width="57" height="30"/>
@@ -276,6 +279,62 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wbC-mA-Flw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="20" y="93.838862559241704"/>
+        </scene>
+        <!--Offline View Controller-->
+        <scene sceneID="u4L-bl-3OK">
+            <objects>
+                <viewController id="WAN-SW-7tD" userLabel="Offline View Controller" customClass="ViewController" customModule="Coup" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cNk-Cj-2dX">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Coup Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6YR-oD-deg">
+                                <rect key="frame" x="156" y="173" width="78" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Offline Game Mode" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sHn-Oc-VXW">
+                                <rect key="frame" x="121" y="264" width="148" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oez-5g-38o">
+                                <rect key="frame" x="172" y="431" width="46" height="30"/>
+                                <state key="normal" title="Add AI"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y8N-Bm-JLU">
+                                <rect key="frame" x="156" y="496" width="78" height="30"/>
+                                <state key="normal" title="Game Start"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Number of AI:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eot-XG-cyB">
+                                <rect key="frame" x="111.33333333333333" y="375" width="167.33333333333337" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="KRV-HC-GbX"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="sHn-Oc-VXW" firstAttribute="centerX" secondItem="cNk-Cj-2dX" secondAttribute="centerX" id="0Sl-xc-j8s"/>
+                            <constraint firstItem="oez-5g-38o" firstAttribute="centerX" secondItem="cNk-Cj-2dX" secondAttribute="centerX" id="26T-Wp-CQ9"/>
+                            <constraint firstItem="Y8N-Bm-JLU" firstAttribute="centerX" secondItem="cNk-Cj-2dX" secondAttribute="centerX" id="4h0-JF-2WQ"/>
+                            <constraint firstItem="6YR-oD-deg" firstAttribute="top" secondItem="KRV-HC-GbX" secondAttribute="top" constant="85" id="Nag-I5-XcY"/>
+                            <constraint firstItem="oez-5g-38o" firstAttribute="top" secondItem="eot-XG-cyB" secondAttribute="bottom" constant="35" id="TBo-D2-yi9"/>
+                            <constraint firstItem="eot-XG-cyB" firstAttribute="centerX" secondItem="cNk-Cj-2dX" secondAttribute="centerX" id="UP2-8z-uH5"/>
+                            <constraint firstItem="eot-XG-cyB" firstAttribute="top" secondItem="sHn-Oc-VXW" secondAttribute="bottom" constant="90" id="VPw-FP-8ME"/>
+                            <constraint firstItem="6YR-oD-deg" firstAttribute="centerX" secondItem="cNk-Cj-2dX" secondAttribute="centerX" id="sdP-Km-8Pa"/>
+                            <constraint firstItem="Y8N-Bm-JLU" firstAttribute="top" secondItem="oez-5g-38o" secondAttribute="bottom" constant="35" id="swi-8K-gP6"/>
+                            <constraint firstItem="sHn-Oc-VXW" firstAttribute="top" secondItem="6YR-oD-deg" secondAttribute="bottom" constant="70" id="yv1-Hd-h1g"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="RdN-KQ-yHT"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TJt-Aq-tpc" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="949" y="871"/>
         </scene>
     </scenes>
     <resources>
