--- a/Coup/Coup/Base.lproj/Main.storyboard
+++ b/Coup/Coup/Base.lproj/Main.storyboard
@@ -501,6 +501,68 @@
             </objects>
             <point key="canvasLocation" x="2649.2307692307691" y="874.4075829383886"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="OPv-sc-64l">
+            <objects>
+                <viewController id="RNS-PI-ttz" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ito-8d-mn4">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="U9l-nQ-mC7">
+                                <rect key="frame" x="0.0" y="44" width="390" height="766"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Waiting for Players" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gvd-Ar-kyB">
+                                        <rect key="frame" x="124.33333333333333" y="0.0" width="141.66666666666669" height="53"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ba2-Ma-cMU">
+                                        <rect key="frame" x="0.0" y="63.000000000000028" width="390" height="478.66666666666674"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="NYZ-d4-uRa">
+                                                <rect key="frame" x="0.0" y="24.333333969116211" width="390" height="43.666667938232422"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="NYZ-d4-uRa" id="bKl-oD-aph">
+                                                    <rect key="frame" x="0.0" y="0.0" width="390" height="43.666667938232422"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HMY-Tt-p7C">
+                                        <rect key="frame" x="178" y="551.66666666666663" width="34" height="78.333333333333371"/>
+                                        <state key="normal" title="Start"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ovz-DY-VWR">
+                                        <rect key="frame" x="180" y="640" width="30" height="126"/>
+                                        <state key="normal" title="Exit"/>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Ba2-Ma-cMU" secondAttribute="trailing" id="GFb-qT-hAy"/>
+                                    <constraint firstItem="Ba2-Ma-cMU" firstAttribute="leading" secondItem="U9l-nQ-mC7" secondAttribute="leading" id="POS-HF-ma8"/>
+                                    <constraint firstItem="Ba2-Ma-cMU" firstAttribute="top" secondItem="gvd-Ar-kyB" secondAttribute="bottom" id="V30-ku-EO0"/>
+                                    <constraint firstItem="HMY-Tt-p7C" firstAttribute="top" secondItem="Ba2-Ma-cMU" secondAttribute="bottom" id="cvh-sz-jk9"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="9sY-Nt-Ffl"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="9sY-Nt-Ffl" firstAttribute="trailing" secondItem="U9l-nQ-mC7" secondAttribute="trailing" id="0wN-j2-LCH"/>
+                            <constraint firstItem="9sY-Nt-Ffl" firstAttribute="bottom" secondItem="U9l-nQ-mC7" secondAttribute="bottom" id="6xB-4A-guW"/>
+                            <constraint firstItem="U9l-nQ-mC7" firstAttribute="top" secondItem="9sY-Nt-Ffl" secondAttribute="top" id="QDm-ld-zGS"/>
+                            <constraint firstItem="U9l-nQ-mC7" firstAttribute="leading" secondItem="9sY-Nt-Ffl" secondAttribute="leading" id="ZHb-TB-S9w"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q0k-Fh-do4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3461.5384615384614" y="874.4075829383886"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
